# MEPGHI-LabNum3

./: .gitignore  CMakeLists.txt  deque.c  generate_random_data.c  main.c  output_stream.c  sorted.c
include/: deque.h  generate_random_data.h  input_stream.h  lib.h  output_stream.h  sorted.h
source/: deque.c  generate_random_data.c  input_stream.c  main.c  output_stream.c  sorted.c
src/: deque.c  generate_random_data.c  input_stream.c  main.c  output_stream.c  sorted.c
